objects/Intake_Animal__c.object
<CustomObject>
    <fields>
        <fullName>Animal__c</fullName>
        <label>Animal</label>
        <referenceTo>Animal__c</referenceTo>
        <relationshipName>Case_Animals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Intake__c</fullName>
        <label>Intake</label>
        <referenceTo>caseman__Intake__c</referenceTo>
        <relationshipLabel>Intake Animals</relationshipLabel>
        <relationshipName>Intake_Animals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Returned to Owner</fullName>
                </value>
                <value>
                    <fullName>Owner Surrender</fullName>
                </value>
                <value>
                    <fullName>RSPCA Claim Ownership</fullName>
                </value>
                <value>
                    <fullName>Not Eligible for Assistance</fullName>
                </value>
                <value>
                    <fullName>Unable to Assist - Case Capacity</fullName>
                </value>
                <value>
                    <fullName>Unable to Assist - Shelter Capacity</fullName>
                </value>
                <value>
                    <fullName>No Further Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Intake Animal</label>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>Intake Animal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Animals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Client_Owns_Animal</fullName>
        <active>true</active>
        <errorConditionFormula>Animal__r.Contact__r.Id =  Animal__r.Contact__r.Id</errorConditionFormula>
        <errorMessage>Client does not own Animal</errorMessage>
    </validationRules>
</CustomObject>